--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -13,6 +13,7 @@
 .main-navigation__logo h1 {
     margin: 0;
     font-size: 1.5rem;
+    color: #dfcefc;
 }
 
 .main-navigation__items {
@@ -24,17 +25,26 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    align-items: center;
 }
 
 .main-navigation__items li {
     margin: 0 1rem;
 }
 
-.main-navigation__items a {
+.main-navigation__items a, .main-navigation__items button {
     text-decoration: none;
-    color: #000;
+    color: white;
+    padding: 0.25rem 0.5rem;
+    border: none;
+    font: inherit;
+    background: transparent;
+    cursor: pointer;
+    margin: 0;
 }
 
-.main-navigation__items a:hover, .main-navigation__items a:active, .main-navigation__items a.active {
-    color: #f8e264;
+.main-navigation__items a:hover, .main-navigation__items a:active, .main-navigation__items a.active .main-navigation__items button:hover .main-navigation__items button:active {
+    background: #ffffff;
+    color: #5101d1;
+    border-radius: 5px;
 }
